# ML_basic

./: README.md  pyproject.toml
LAB@2/: GUI.py  lab2.ipynb  model.joblib
LAB@3/: lab3.ipynb
ML_2/: main.ipynb
data_visualization/: IPL.ipynb  plotly-cufflinks.ipynb  seaborn.ipynb  visual.ipynb
machine_learning_1/: insurance.csv  project_1.ipynb  project_2.ipynb
numpy/: arr_opr.ipynb  basic_numpy.ipynb  exercise.ipynb  more_numpy.ipynb
pandas/: concatenated_fraud_data.csv  credit_card_fraud_10k.csv  fraud_grocery.csv  left_joined_fraud_data.csv  pandas.ipynb
