[project]
name = "ml-basic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cufflinks>=0.17.3",
    "ipython>=9.9.0",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "numpy>=2.4.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sheryanalysis>=0.1.0",
    "streamlit>=1.54.0",
    "wordcloud>=1.9.6",
]
